style.css
/* ... */
.header-bottom .search-box.active {
	opacity: 1;
	visibility: visible;
	right: 0;
	z-index: 9;
}

.header-bottom .search-box .search-field {
	width: 80%;
	border-right: none;
	border-top: none;
	border-left: none;
	border-bottom: 1px solid #a1a1a1;
}

.header-bottom .searchform .btn {
	background-color: #30afb8;
}

.header-bottom .searchform .btn:hover {
	background-color: #2299a1;
}

.search-submit .fa {
	color: #fff;
}

.header-bottom .cart-wrap {
	float: right;
	padding: 20px 0 20px 30px;
	position: relative;
}

.header-bottom .flash-cart-views {
	font-size: 14px;
	height: 30px;
	width: 30px;
	line-height: 30px;
	text-align: center;
	border: 1px solid #9ca6b2;
	border-radius: 100%;
}

.header-bottom .flash-cart-views a {
	color: #99a3b0;
	position: relative;
}

.header-bottom .flash-cart-views a span {
	background-color: #30afb8;
	border-radius: 100%;
	font-size: 12px;
	left: 17px;
	height: 20px;
	width: 20px;
	line-height: 20px;
	text-align: center;
	position: absolute;
	top: -10px;
	color: #fff;
}

.header-bottom .widget_shopping_cart {
	opacity: 0;
	visibility: hidden;
	position: absolute;
	top: 100%;
	right: -10px;
	min-width: 250px;
	box-shadow: 1px 1px 6px rgba(0, 0, 0, 0.2);
	background-color: #fff;
	padding: 15px;
	-webkit-transition: all 0.5s ease;
	-moz-transition: all 0.5s ease;
	transition: all 0.5s ease;
	z-index: 99;
}

.header-bottom .widget_shopping_cart ul {
	margin: 0;
}

.header-bottom .widget_shopping_cart ul li {
	text-align: center;
}

.header-bottom .cart-wrap:hover .widget_shopping_cart {
	opacity: 1;
	visibility: visible;
	right: 0;
	z-index: 9;
}

.boxed {
	width: 1200px;
	margin: 0 auto;
}

.boxed .site {
	background: #fff none repeat scroll 0 0;
	box-shadow: 0px 0px 12px 1px rgba(0, 0, 0, 0.3);
	margin: 30px 0;
	position: relative;
}

.boxed .tg-container {
	width: 100%;
	padding: 0 30px;
}

@media(max-width: 980px) {
	.boxed .tg-container {
		width: 98%;
	}
}

.transparent #masthead {
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	z-index: 999;
}

.transparent .header-top {
	background-color: transparent;
	border-bottom: 1px solid rgba(255, 255, 255, 0.3);
	color: #fff;
}

.transparent .contact-info span {
	color: #fff;
}

.transparent .contact-info li {
	color: #fff;
}

.transparent .header-bottom {
	border: none;
	background-color: transparent;
	border-bottom: 1px solid rgba(255, 255, 255, 0.3);
}

.transparent .logo-text,
.transparent .logo-text a {
	color: #fff;
}

.transparent.header-sticky #site-navigation ul li:hover > a {
	color: #30afb8;
}

.transparent #site-navigation .menu-toggle .fa,
.transparent #site-navigation ul li .sub-toggle {
	color: #fff;
}

.transparent #site-navigation ul.sub-menu li {
	padding: 0;
}

.transparent #site-navigation ul li a {
	color: #fff;
	display: inline-block;
}

.transparent #site-navigation ul li:hover .sub-toggle {
	color: #30afb8;
}

.transparent #site-navigation ul li:hover a {
	color: #30afb8;
	position: relative;
	visibility: none;
}

.transparent #site-navigation ul.sub-menu li a {
	color: #4c5867;
	padding: 10px 30px;
}

.transparent #site-navigation ul.sub-menu li a::before {
	display: none;
}

.transparent #site-navigation ul.sub-menu li:hover a,
.transparent #site-navigation ul.sub-menu li.menu-item-has-children ul li:hover a {
	color: #30afb8;
}

.transparent #site-navigation ul.sub-menu li.menu-item-has-children ul li a {
	color: #4c5867;
}

.transparent .cart-wrap .flash-cart-views {
	border-color: #fff;
}

.transparent .cart-wrap .flash-cart-views a {
	color: #fff;
}

.transparent .search-wrap .search-icon {
	color: #fff;
	border-color: #fff;
}

.right-logo-left-menu .header-bottom .tg-container {
	-webkit-box-orient: horizontal;
	-webkit-box-direction: reverse;
	-ms-flex-direction: row-reverse;
	flex-direction: row-reverse;
}

.right-logo-left-menu .header-bottom #site-navigation {
	float: left;
}

.right-logo-left-menu .header-bottom .header-action-container {
	margin-right: auto;
}
.right-logo-left-menu .header-bottom .header-action-container .cart-wrap,
.right-logo-left-menu .header-bottom .header-action-container .search-wrap {
	padding-left: 0;
	padding-right: 30px;
}

.right-logo-left-menu .header-bottom .search-box {
	left: -10px;
}

.right-logo-left-menu .header-bottom .search-box.active {
	right: auto;
	left: 0;
}

.right-logo-left-menu .header-bottom .widget_shopping_cart {
	left: 0;
}

.center-logo-below-menu .header-bottom .tg-container {
	display: block;
	text-align: center;
}
.center-logo-below-menu .logo {
	float: none;
}

.center-logo-below-menu .logo .logo-text,
.center-logo-below-menu .logo .logo-image {
	float: none;
}

.center-logo-below-menu .logo .logo-image {
	padding: 20px 0 0 0;
	display: inline-block;
}

.center-logo-below-menu #site-navigation {
	float: left;
}

.center-logo-below-menu .header-bottom .header-action-container {
	display: none;
}

.center-logo-below-menu .header-bottom .site-navigation-wrapper {
	display: -webkit-box;
	display: -ms-flexbox;
	display: flex;
}
.center-logo-below-menu .header-bottom .site-navigation-wrapper .header-action-container {
	display: -webkit-box;
	display: -ms-flexbox;
	display: flex;
	margin-left: auto;
}

.header-sticky .is-sticky #masthead {
	z-index: 99 !important;
}
.header-sticky .is-sticky .header-bottom {
	background: #fff;
	box-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
}

.transparent.header-sticky #masthead-sticky-wrapper {
	left: 0;
	position: absolute;
	top: 0;
	width: 100%;
	z-index: 99;
}

.transparent.header-sticky #masthead {
	left: auto;
}

.transparent.header-sticky .header-top {
	display: none;
}

.transparent.header-sticky .header-bottom {
	background-color: transparent;
	border-bottom: 1px solid rgba(255, 255, 255, 0.3);
}

.transparent.header-sticky #site-navigation .menu-toggle .fa,
.transparent.header-sticky #site-navigation ul li a,
.transparent.header-sticky .flash-cart-views a {
	color: #fff;
}


.transparent.header-sticky #site-navigation ul.sub-menu li a {
	color: #333333;
}
/* ... */

